--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "^4.7.2",
     "inferno": "^3.10.1",
     "inferno-component": "^3.10.1",
     "inferno-scripts": "5.0.0"
